--- a/public/manifest.json
+++ b/public/manifest.json
@@ -2,7 +2,23 @@
   "short_name": "LN Portfolio",
   "name": "Laxmikant Nishad - AI/ML Engineer Portfolio",
   "description": "Portfolio of Laxmikant Nishad, an AI/ML Engineer specializing in multi-modal models, LLM fine-tuning, and computer vision.",
-  "icons": [],
+  "icons": [
+    {
+      "src": "/favicon.svg",
+      "sizes": "32x32",
+      "type": "image/svg+xml"
+    },
+    {
+      "src": "/profile.jpg",
+      "sizes": "192x192",
+      "type": "image/jpeg"
+    },
+    {
+      "src": "/profile.jpg",
+      "sizes": "512x512",
+      "type": "image/jpeg"
+    }
+  ],
   "start_url": ".",
   "display": "standalone",
   "theme_color": "#1e90ff",
